RESOLVED FIXED126901
Performance regression on dromaeo due to generational marking
https://bugs.webkit.org/show_bug.cgi?id=126901
Summary Performance regression on dromaeo due to generational marking
Mark Hahnenberg
Reported 2014-01-13 07:49:49 PST
Generational marking is off in ToT, but some of the machinery to make it work isn't fully disabled which is causing regressions on dromaeo. We should disable more things to get to a point where the patch is no regression when ENABLE_GGC == 0 because it would be nice to have the option to disable generational collection for diagnosing any potential GGC bugs.
Attachments
Patch (5.56 KB, patch)
2014-01-13 12:58 PST, Mark Hahnenberg
no flags
Mark Hahnenberg
Comment 1 2014-01-13 12:58:26 PST
Mark Hahnenberg
Comment 2 2014-01-13 15:11:52 PST
I ran dromaeo and it looks like this patch fixes the obvious regressions.
WebKit Commit Bot
Comment 3 2014-01-13 15:46:51 PST
Comment on attachment 221075 [details] Patch Clearing flags on attachment: 221075 Committed r161914: <http://trac.webkit.org/changeset/161914>
WebKit Commit Bot
Comment 4 2014-01-13 15:46:52 PST
All reviewed patches have been landed. Closing bug.
Joseph Pecoraro
Comment 5 2015-10-06 18:21:09 PDT
*** Bug 126902 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.