Performance regression on dromaeo due to generational marking https://bugs.webkit.org/show_bug.cgi?id=126901

Reviewed by Oliver Hunt.

We were seeing some performance regression with ENABLE_GGC == 0, so this patch
ifdefs out more things to get rid of the additional overhead.

* heap/Heap.cpp:
(JSC::Heap::markRoots):
(JSC::Heap::writeBarrier):
* heap/MarkedBlock.cpp:
(JSC::MarkedBlock::clearMarks):
(JSC::MarkedBlock::clearMarksWithCollectionType):
* heap/MarkedSpace.cpp:
(JSC::MarkedSpace::resetAllocators):
* heap/MarkedSpace.h:
(JSC::MarkedSpace::didAllocateInBlock):
* heap/SlotVisitorInlines.h:
(JSC::SlotVisitor::internalAppend):
(JSC::SlotVisitor::reportExtraMemoryUsage):


Canonical link: https://commits.webkit.org/144910@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161914 268f45cc-cd09-0410-ab3c-d52691b4dbfc