Source/JavaScriptCore/heap/MarkedSpace.h
@@ -277,7 +277,11 @@ inline void MarkedSpace::didAddBlock(MarkedBlock* block)
 
 inline void MarkedSpace::didAllocateInBlock(MarkedBlock* block)
 {
+#if ENABLE(GGC)
     m_blocksWithNewObjects.append(block);
+#else
+    UNUSED_PARAM(block);
+#endif
 }
 
 inline void MarkedSpace::clearRememberedSet()
